updates to images by the widescale and a different video. the addition of ds and genesys

--- a/src/archive.html
+++ b/src/archive.html
@@ -119,10 +119,9 @@
         <div class="grid-crosshair right"></div>
 
         <div class="flex flex-col w-full gap-4 md:px-8">
-          <h2 class="z-20">Playground</h2>
+          <h3 class="z-20">Playground</h3>
           <p class="smolwidth z-20 text-grey">
-            Explore my playground, a collection of my ongoing experiments in
-            art, code, and design.
+            // A collection of my ongoing experiments in art, code, and design
           </p>
         </div>
       </section>
