--- a/src/index.html
+++ b/src/index.html
@@ -53,7 +53,7 @@
     <div class="cursor-follower"></div>
 
     <div class="geist-grid-wrapper">
-      <section class="px-4 md:px-16 2xl:px-20 pb-8 lg:pb-24 hero-with-grid">
+      <section class="px-4 md:px-16 2xl:px-20 py-14 lg:pb-24 hero-with-grid">
         <div class="grid-lines"></div>
         <div class="grid-crosshair left"></div>
         <div class="grid-crosshair right"></div>
@@ -69,7 +69,7 @@
             <div class="max-w-3xl mx-auto space-y-6">
               <h2 class="text-center">Hey I am Nina, a uxui designer.</h2>
               <p class="smolwidth text-center text-grey">
-                /* As a vocalist who can also code, my strengths are on focusing
+                /* As a vocalist and developer, my strengths are on focusing
                 on the technical and fine-tuning harmonous experiences */
               </p>
             </div>
@@ -81,6 +81,12 @@
         <div class="grid-lines"></div>
         <div class="grid-crosshair left"></div>
         <div class="grid-crosshair right"></div>
+         <div class="flex flex-col w-full gap-4 md:px-20 pb-8">
+          <h3 class="z-20">Featured Works</h3>
+                    <p class="smolwidth z-20 text-grey">
+            // Craft at the intersection of the visual and the computational
+          </p>
+        </div>
 
         <div class="px-4 md:px-16 2xl:px-20">
 <div class="grid grid-cols-1 md:grid-cols-2 gap-8 cards-section"></div>
