--- a/src/about.html
+++ b/src/about.html
@@ -1,207 +1,306 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+  <head>
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-E6RS5N28XQ"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
 
-<head>
-  <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-E6RS5N28XQ"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
+      gtag("config", "G-E6RS5N28XQ");
+    </script>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/png" href="ladybug.png" />
+    <link rel="stylesheet" href="global.styles.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Darker+Grotesque:wght@300..900&family=Syne:wght@400..800&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Doto:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
 
-    gtag('config', 'G-E6RS5N28XQ');
-  </script>
-  <meta charset="UTF-8" />
-  <link rel="icon" type="image/png" href="ladybug.png">
-  <link rel="stylesheet" href="global.styles.css">
-  <link
-    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
-    rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-  <link
-    href="https://fonts.googleapis.com/css2?family=Darker+Grotesque:wght@300..900&family=Syne:wght@400..800&display=swap"
-    rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Nina's Portfoilo</title>
 
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Nina's Portfoilo</title>
-</head>
+    <style>
+      .archive-hero .grid-lines {
+        background-image:
+          linear-gradient(
+            to right,
+            var(--grid-line-color) 1px,
+            transparent 1px
+          ),
+          linear-gradient(
+            to right,
+            var(--grid-line-color) 1px,
+            transparent 1px
+          ),
+          linear-gradient(to right, var(--grid-line-color) 1px, transparent 1px);
+        background-size:
+          1px 100%,
+          1px 100%,
+          1px 100%;
+        background-position:
+          var(--grid-line-1) 0,
+          var(--grid-line-3) 0,
+          var(--grid-line-4) 0;
+        background-repeat: no-repeat;
+      }
 
-<body>
-  <script src="header.js" type="module"></script> <!-- where header.js is the name of our reusable component script -->
-  <script src="footer.js" type="module"></script> <!-- where header.js is the name of our reusable component script -->
+      .archive-projects .grid-lines {
+        background-image:
+          linear-gradient(
+            to right,
+            var(--grid-line-color) 1px,
+            transparent 1px
+          ),
+          linear-gradient(
+            to right,
+            var(--grid-line-color) 1px,
+            transparent 1px
+          ),
+          linear-gradient(
+            to right,
+            var(--grid-line-color) 1px,
+            transparent 1px
+          ),
+          linear-gradient(to right, var(--grid-line-color) 1px, transparent 1px);
+        background-size:
+          1px 100%,
+          1px 100%,
+          1px 100%,
+          1px 100%;
+        background-position:
+          var(--grid-line-1) 0,
+          var(--grid-line-2) var(--grid-crosshair-y),
+          var(--grid-line-3) var(--grid-crosshair-y),
+          var(--grid-line-4) 0;
+        background-repeat: no-repeat;
+      }
+    </style>
 
-  <header-component></header-component>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.0/p5.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.0/addons/p5.sound.min.js"></script>
+  </head>
 
+  <body>
+    <script src="header.js" type="module"></script>
+    <script src="footer.js" type="module"></script>
 
-  <div class="cursor">
-    <span class="cursor-text"></span>
-  </div>
-  <div class="cursor-follower"></div>
+    <header-component></header-component>
 
-  <section
-    class="flex flex-col md:flex-row py-8 md:py-20 px-4 md:px-16 gap-8 md:gap-16 pt-20 md:pt-36 2xl:items-center">
-    <!-- Right Image Section -->
-    <div class="flex-auto w-full">
-      <img src="profile.png" alt="Profile picture of Nina Le"
-        class="rounded-3xl w-full h-1/2 sm:h-full lg:w-full lg:h-[524px] 2xl:h-[800px] object-cover object-center">
+    <div class="cursor">
+      <span class="cursor-text"></span>
     </div>
-    <!-- Left Content Section -->
-    <div class="flex flex-col gap-8 md:gap-12 xl:gap-14 md:w-full">
-      <div>
-        <h3 class="pb-4">I am a uxui designer who codes, and occasionally sings.
-</h3>
-        <p>
-      Hi, I am Nina (she/her), a fourth year design student at York University.
+    <div class="cursor-follower"></div>
 
+    <div class="geist-grid-wrapper">
+      <!-- Main Profile Section -->
+      <section
+        class="px-4 md:px-16 2xl:px-20 pt-16 md:pt-12 pb-8 lg:pb-24 hero-with-grid archive-hero"
+      >
+        <div class="grid-lines"></div>
+        <div class="grid-crosshair left"></div>
+        <div class="grid-crosshair right"></div>
 
-          I was always on the creative part of the internet. I spent my early childhood watching digital speedpaints, which taught me how to draw. The best speedpaints were always the ones with nightcore or nu metal music, which was (probably) what got me into singing. I eventually picked up on how to code.
-          <br>
-          As a ux/ui designer, I now bring a multidisciplinary approach that combines aesthetic sensibility
-          with functional precision. My background in both design
-          and development allows me to create experiences that are not only visually
-          compelling but technically sound. 
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-8 pt-8 md:pt-32">
+          <!-- Left Content Section -->
+          <div class="flex flex-col gap-8 md:gap-12 xl:gap-14 z-10 relative">
+            <div class="flex flex-col gap-4">
+              <h3 class="z-20">Thanks for stopping by!</h3>
 
-         
+              <p>
+                Hi, I am Nina (she/her), a fourth year design student at York
+                University. I was always on the creative part of the internet. I
+                spent my early childhood watching digital speedpaints, which
+                taught me how to draw. The best speedpaints were always the ones
+                with nightcore or nu metal music, which was (probably) what got
+                me into singing. I eventually picked up on how to code.
+                <br /><br />
+                As a ux/ui designer, I now bring a multidisciplinary approach
+                that combines aesthetic sensibility with functional precision.
+                My background in both design and development allows me to create
+                experiences that are not only visually compelling but
+                technically sound.
+              </p>
+            </div>
+            <a
+              href="https://drive.google.com/file/d/15Vbiz09x6SVD2cTScr3ldKVGAPqeNlPY/view?usp=sharing"
+              target="_blank"
+              class="hover-image"
+            >
+              <button
+                class="w-full rounded-2xl px-16 pb-6 py-5 2xl:py-8 bg-violet-50 text-blob hover:text-white hover:bg-pig transition m-full cursor-pointer"
+              >
+                <h4>Open Resume</h4>
+              </button>
+            </a>
+          </div>
+          <!-- Right Image Section -->
+          <div class="w-full z-10 relative">
+            <img
+              src="profile.png"
+              alt="Profile picture of Nina Le"
+              class="rounded-3xl w-full h-auto lg:h-[524px] 2xl:h-[800px] object-cover object-center"
+            />
+          </div>
+        </div>
+      </section>
 
-        </p>
-      </div>
-      <a href="https://drive.google.com/file/d/15Vbiz09x6SVD2cTScr3ldKVGAPqeNlPY/view?usp=sharing" target="_blank"
-        class="hover-image">
-        <button
-          class="w-full rounded-2xl px-16 pb-6 py-5 2xl:py-8  bg-violet-50 text-blob hover:text-white hover:bg-pig transition m-full  cursor-pointer">
-          <h4>Open Resume</h4>
-        </button>
-      </a>
+      <!-- Recognition Section -->
+      <section
+        class="md:pt-32 projects-with-grid archive-projects pb-8 lg:pb-24"
+      >
+        <div class="grid-lines"></div>
+        <div class="grid-crosshair left"></div>
+        <div class="grid-crosshair right"></div>
+
+        <div class="flex flex-col w-full gap-4 md:px-20 pb-8">
+          <h3 class="z-20">Recognition</h3>
+        </div>
+
+        <div class="px-4 md:px-16 2xl:px-20">
+          <div class="grid grid-cols-1 md:grid-cols-3">
+            <div
+              class="flex flex-col gap-8 rounded-2xl z-10 relative pr-4"
+            >
+              <div
+                class="flex justify-center items-center 2xl:p-8 rounded-2xl h-48 2xl:h-56 overflow-hidden border border-grid bg-white"
+              >
+                <img src="rgd.png" class="w-4/6 h-auto" />
+              </div>
+              <div class="flex flex-col gap-2 ">
+                <h6>RGD AWARDS x2</h6>
+                <h4>
+                  (1) 1st Place, UXD (2) Honourable Mention in Augmented
+                  Creativity
+                </h4>
+              </div>
+            </div>
+
+            <div
+              class="flex flex-col gap-8 rounded-2xl px-4 z-10 relative"
+            >
+              <div
+                class="flex justify-center items-center 2xl:p-8 rounded-2xl h-48 2xl:h-56 overflow-hidden border border-grid bg-white"
+              >
+                <img src="dubstech.png" class="w-4/6 h-auto" />
+              </div>
+              <div class="flex flex-col gap-2">
+                <h6>DUBSTECH</h6>
+                <h4>(3) 3rd Place, Gaming Track - UXD Spring Hackathon</h4>
+              </div>
+            </div>
+
+            <div
+              class="flex flex-col gap-8 rounded-2xl z-10 relative pl-4"
+            >
+              <div
+                class="flex justify-center items-center 2xl:p-8 rounded-2xl h-48 2xl:h-56 overflow-hidden border border-grid bg-white"
+              >
+                <img src="dsa.png" class="w-2/6 h-auto " />
+              </div>
+              <div class="flex flex-col gap-2">
+                <h6>DSA DESN'ATHON x2</h6>
+                <h4>(4) 2nd Place, Student Leadership (5) Sustainability</h4>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Hobbies Section -->
+      <section
+        class="md:pt-32 projects-with-grid archive-projects pb-8 lg:pb-24"
+      >
+        <div class="grid-lines"></div>
+        <div class="grid-crosshair left"></div>
+        <div class="grid-crosshair right"></div>
+
+        <div class="flex flex-col w-full gap-4 md:px-20 pb-8">
+          <h3 class="z-20">In my free time you can find me...</h3>
+        </div>
+
+        <div class="px-4 md:px-16 2xl:px-20">
+          <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-8">
+            <div class="z-10 relative">
+              <img src="tea.jpg" class="w-full h-auto rounded-lg" />
+              <h4>↑ At afternoon tea; find the decoden phone case I made!</h4>
+            </div>
+
+            <div class="z-10 relative">
+              <img src="code.jpg" class="w-full h-auto rounded-lg" />
+              <h4>
+                ↑ Coding! I have been coding with HTML, CSS/Tailwind, and some
+                Javascript. Currently looking into Python...
+              </h4>
+            </div>
+
+            <div class="z-10 relative">
+              <img src="wip.jpg" class="w-full h-auto rounded-lg" />
+              <h4>
+                ↑ Making all kinds of art. Pivoting a bit from illustration,
+                I've recently been sculpting mini clay figurines >:)
+              </h4>
+            </div>
+
+            <div class="z-10 relative">
+              <img src="frogs.jpg" class="w-full h-auto rounded-lg" />
+              <h4>
+                ↑ Showing off work I am proud of - including the final form of
+                my clay frogs
+              </h4>
+            </div>
+
+            <div class="z-10 relative">
+              <img src="aqua.jpg" class="w-full h-auto rounded-lg" />
+              <h4>↑ Admiring sea life at Ripley's Aquarium</h4>
+            </div>
+
+            <div class="z-10 relative">
+              <img src="emo.jpg" class="w-full h-auto rounded-lg" />
+              <h4>
+                ↑ Listening and belting to emo music (I am a great singer,
+                trust)
+              </h4>
+            </div>
+          </div>
+        </div>
+      </section>
     </div>
 
-
-  </section>
-
-
-
-  <section class="py-8 md:py-20 md:px-16 flex flex-col px-4 gap-8 md-gap-3 border-t border-grey 2xl:px-20">
-    <h3>Recognition</h3>
-
-    <div class="flex md:flex-row flex-col w-full gap-8 2xl:gap-12">
-      <div class="flex-grow flex flex-col gap-8 md:w-1/3">
-        <div class="flex justify-center items-center 2xl:p-16 rounded-2xl h-48 2xl:h-72 overflow-hidden border ">
-          <img src="rgd.png" class="w-4/6 h-auto">
-        </div>
-        <div class="flex flex-col gap-4">
-          <h6>RGD AWARDS x2</h6>
-          <h4>(1) 1st Place, UXD (2) Honourable Mention in Augmented Creativity</h4>
-        </div>
-
-      </div>
-
-      <div class="flex-grow flex flex-col gap-8 md:w-1/3">
-        <div class="flex justify-center items-center 2xl:p-16 rounded-2xl h-48 2xl:h-72 overflow-hidden border ">
-          <img src="dubstech.png" class="w-4/6 h-auto">
-        </div>
-        <div class="flex flex-col gap-4">
-          <h6>DUBSTECH</h6>
-          <h4>(3) 3rd Place, Gaming Track - UXD Spring Hackathon</h4>
-        </div>
-
-      </div>
-
-      <div class="flex-grow flex flex-col gap-8 md:w-1/3">
-        <div class="flex justify-center items-center 2xl:p-16 rounded-2xl h-48 2xl:h-72 overflow-hidden border">
-          <img src="dsa.png" class="w-2/6 h-auto">
-        </div>
-        <div class="flex flex-col gap-4">
-          <h6>DSA DESN'ATHON x2</h6>
-          <h4>(4) 2nd Place, Student Leadership (5) Sustainability</h4>
-        </div>
-
-      </div>
-    </div>
-  </section>
-
-  <!-- Values Section -->
-
-
-
-
-  <section class="flex flex-col py-8 md:py-16 px-4 md:px-16 gap-8 md:gap-12 border-y border-grey">
-
-    <h3>In my free time you can find me...</h3>
-
-
-
-
-
-    <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-8">
-
-      <!-- Images, maintaining their original ratio -->
-      <div>
-        <img src="tea.jpg" class="w-full h-auto rounded-lg">
-        <h4>↑ At afternoon tea; find the decoden phone case I made! </h4>
-      </div>
-
-      <div>
-        <img src="code.jpg" class="w-full h-auto rounded-lg">
-        <h4>↑ Coding! I have been coding with HTML, CSS/Tailwind, and some Javascript. Currently looking into Python...
-        </h4>
-      </div>
-
-      <div>
-        <img src="wip.jpg" class="w-full h-auto rounded-lg">
-        <h4>↑ Making all kinds of art. Pivoting a bit from illustration, I've recently been sculpting mini clay
-          figurines >:)</h4>
-      </div>
-
-      <div>
-        <img src="frogs.jpg" class="w-full h-auto rounded-lg">
-        <h4>↑ Showing off work I am proud of - including the final form of my clay frogs</h4>
-      </div>
-
-      <div>
-        <img src="aqua.jpg" class="w-full h-auto rounded-lg">
-        <h4>↑ Admiring sea life at Ripley's Aquarium</h4>
-      </div>
-
-
-      <div>
-        <img src="emo.jpg" class="w-full h-auto rounded-lg">
-        <h4>↑ Listening and belting to emo music (I am a great singer, trust)</h4>
-      </div>
-
-
-
-
+    <!-- Designing harmony section -->
+    <div class="justify-center bg-[#1B191B] w-[100%] pt-16 space-y-4 px-24">
+      <h3 class="text-white">Designing harmony, one pixel at a time.</h3>
+      <h6 class="text-grey">
+        Play a song that holds a special place in my heart
+      </h6>
     </div>
 
+    <!-- p5.js Sketch Container -->
+    <section>
+      <div id="sketch-container" class="w-full overflow-hidden"></div>
+    </section>
 
+    <footer-component></footer-component>
 
-
-
-
-
-
-
-
-
-
-  </section>
-
-
-
-
-
-
-
-
-  <footer-component></footer-component>
-
-
-
-
-
-
-
-  <footer id="footer"></footer>
-  <script type="module" src="cursor.js"></script>
-</body>
-
+    <script type="module" src="cursor.js"></script>
+    <script src="sketch.js"></script>
+  </body>
 </html>
